--- a/src/index.css
+++ b/src/index.css
@@ -102,19 +102,30 @@ header {
 
 .input-group {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.form-group {
+  display: flex;
   flex-direction: row;
-  border: 1px solid #ccc;
-  padding: 8px 10px;
-  border-radius: 8px;
+  justify-content: center;
+  align-items: center;
 }
-
-input {
+input,
+textarea {
   flex-grow: 2;
-  border: none;
+  border: 2px solid #202142;
+  padding: 5px;
+  border-radius: 6px;
   font-size: 16px;
+  width: 25rem;
+  font-family: "Poppins", sans-serif;
+  outline: none;
 }
 
-input:focus {
+input,
+textarea :focus {
   outline: none;
 }
 
